# LOCiD

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  LOCiD_Checklist.md  LOCiD_Design_Document_v19.0.0.md  README.md  locid.c  locid.h  performance_test.sh  toolchain-win32.cmake  toolchain-win64.cmake
include/: device.h  globals.h  hashing.h  loci.h  locid.h  stability.h
src/: device.c  globals.c  hashing.c  library.c  loci.c  main.c  stability.c
